# ants

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
docs/: Doxyfile
include/ants/: ant.hpp  ant_strategy.hpp  colony.hpp  phermone.hpp  resource.hpp  resource_pile.hpp  scavenger_ant.hpp  vector.hpp
include/model/: ant.hpp  ant_strategy.hpp  phermone.hpp  resource.hpp  scavenger_ant.hpp  vector.hpp
src/: ant.cpp
src/ants/: ant.cpp  scavenger_ant.cpp
src/model/: ant.cpp  scavenger_ant.cpp  vector.cpp
